codex-rs/tui/src/chatwidget/slash_dispatch/codex_plus_plus/snapshots/codex_tui__chatwidget__slash_dispatch__codex_plus_plus__tests__codex_plus_plus_settings_disabled.snap
---
source: tui/src/chatwidget/slash_dispatch/codex_plus_plus/codex_plus_plus_tests.rs
expression: "render_settings(AutomaticAccountSelection::Disabled)"
---

  Codex++ Settings
  Select the settings to enable.

› 1. [ ] Automatic account selection  Choose and switch accounts when needed.




  Press space to toggle; enter to save; esc to cancel
